--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,7 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 body {
-    background: #ff0000;
+    background: #ff0000 !important;
 }
 
 // Use media queries like this:
